--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 html, body, div, span, applet, object, iframe,
 p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
+del, em, img, ins q, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
@@ -12,7 +12,7 @@ fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
+menu, nav, output, section, summary,
 time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -32,20 +32,24 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
+
 body {
   line-height: 1;
 }
+
 ol, ul {
   list-style: none;
 }
 blockquote, q {
   quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -103,26 +107,26 @@ img {
 }
 
 body > header {
-  width: 20%;
+  width: 100%;
   background-color: #160C28;
   color: #fff;
 }
 
-body > header > figure > img {
+header img {
   display: block;
   max-width: 3em;
 }
 
-body > header > nav > ul li {
+header ul li {
   width: 100%;
   height: 3em;
 }
 
-body > header > nav > ul li:hover {
+header ul li:hover {
   background-color: #000411;
 }
 
-body > header > nav > ul li a {
+header a {
   width: 100%;
   height: 3em;
   display: flex;
@@ -130,7 +134,7 @@ body > header > nav > ul li a {
   align-items: center;
 }
 
-body > header > figure {
+header > figure {
   width: 3em;
   order: 2;
   margin: 0 auto;
@@ -153,14 +157,14 @@ body > header > nav {
   order: 3;
 }
 
-body > header > nav > ul li a svg {
+body > header svg {
   margin-right: 1em;
   fill: #fff;
 }
 
-body > main {
-  width: 80%;
-  padding: 1.5em;
+main {
+  width: 100%;
+  padding: 0;
   background-color: #E1EFE6;
   display: flex;
   flex-flow: row wrap;
@@ -168,79 +172,85 @@ body > main {
   justify-content: space-around;
 }
 
-body > main article {
+main article {
   padding: 1.5em;
-  border-radius: 0.2em;
+  margin: 0;
   background-color: #fff;
-  width: 40em;
+  border-radius: none;
+  width: 100%;
   height: 100%;
-  margin-bottom: 1.5em;
 }
 
-body > main article:target {
+main article:nth-child(2n+1) {
+  background-color: #E1EFE6;
+}
+
+main article:target {
   -webkit-box-shadow: 0 0 19px -1px rgba(0,0,0,.75);
   -moz-box-shadow: 0 0 19px -1px rgba(0,0,0,.75);
   box-shadow: 0 0 19px -1px rgba(0,0,0,.75);
 }
 
-body > main article:nth-child(2) > section > header {
+main article:nth-child(2) header {
   width: 100%;
 }
 
-body > main article:nth-child(2) > section {
+main article:nth-child(2) > section {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 1em;
 }
 
-body > main article:nth-child(2) > section > figure {
+main article:nth-child(2) > section figure {
   max-width: 300px;
   max-width: min-content;
   margin: auto;
 }
 
-body > main article:nth-child(2) > div:nth-child(2) > button {
+main article:nth-child(2) > div:nth-child(2) > button {
   margin-bottom: 1em;
 }
 
-body > main article:nth-child(3) {
+main article:nth-child(3) {
   display: flex;
   flex-direction: column;
 }
 
-body > main article:nth-child(3) > header > h2 {
+main article:nth-child(3) h2 {
   width: 100%;
 }
 
-body > main article:nth-child(3) > form > fieldset {
+main article:nth-child(3) fieldset {
   width: 100%;
   display: flex;
 }
 
-body > main article:nth-child(3) > form > fieldset > legend {
+main article:nth-child(3) legend {
   margin-bottom: 1em;
 }
 
-body > main article:nth-child(3) > form > fieldset label {
+main article:nth-child(3) label {
   max-width: 100%;
   margin-bottom: 1em;
   display: flex;
   flex-wrap: wrap;
 }
 
-body > main article:nth-child(3) > form > fieldset label input {
-  margin-right: 1em;
+main article:nth-child(3) input {
+  height: 3em;
+  width: 100%;
 }
 
-body > main article:nth-child(3) > form > fieldset label span {
-  width: 9.375em;
-}
-
-body > main article:nth-child(4) figure:nth-child(2) {
+main article:nth-child(3) span {
+  width: 100%;
   margin-bottom: 1em;
 }
 
-body > main article:nth-child(4) figure figcaption {
+main article:nth-child(4) figure:nth-child(2) {
+  margin-bottom: 1em;
+}
+
+main article:nth-child(4) figcaption {
   width: 100%;
 }
 
@@ -253,10 +263,12 @@ body > main article:nth-child(4) figure figcaption {
 }
 
 .popout a {
+  margin: auto;
   box-shadow: 0 0 0 100vmax rgba(0,0,0,.75);
   position: fixed;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
   padding: 1em;
   font-weight: bold;
   border-radius: 0.1em;
@@ -265,6 +277,7 @@ body > main article:nth-child(4) figure figcaption {
 }
 
 [role="button"] {
+  width: 100%;
   font-size: 1.2em;
   font-weight: bold;
   border-radius: 0.1em;
@@ -280,8 +293,9 @@ body > main article:nth-child(4) figure figcaption {
   opacity: .75;
 }
 
-body > footer {
+footer {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   padding: 1.5em;
   min-width: 100%;
@@ -289,55 +303,70 @@ body > footer {
   color: #fff;
 }
 
-@media (max-width: 480px) {
+address {
+  margin-top: 1em;
+}
+
+@media (min-width: 480px) {
   
-  body > footer {
-    flex-direction: column;
+  footer {
+    flex-direction: row;
   }
 
-  body > footer > address {
-    margin-top: 1em;
+  address {
+    margin-top: 0;
   }
 }
 
-@media (max-width: 680px) {
-	body > main {
-		padding: 0;
+@media (min-width: 680px) {
+
+	main {
+		padding: 1.5em;
 	}
 
-	body > main article {
-		width: 100%;
-		margin: 0;
-		border: none;
-		border-radius: none;
+	main article {
+		width: 40em;
+		border-radius: 0.2em;
+    background-color: #fff;
+    margin-bottom: 1.5em;
 	}
 
-	body > main article:nth-child(2n+1) {
-		background-color: #E1EFE6;
-	}
+  main article:nth-child(2n+1) {
+    background-color: #fff;
+  }
 
-	body > main article:nth-child(3) > form > fieldset > button {
-	  width: 100%;
+	[role="button"] {
+	  width: auto;
 	}
 }
 
-@media (max-width: 999px) {
+@media (min-width: 999px) {
+
   body > header {
-    width: 100%;
+    width: 20%;
   }
 
-  body > main {
-    width: 100%;
+  main {
+    width: 80%;
+  }
+
+  main article:nth-child(3) input {
+    height: auto;
+  }
+
+  main article:nth-child(3) span {
+    margin-bottom: 0.5em;
   }
 }
 
-@media (max-width: 1305px) {
+@media (min-width: 1305px) {
 
-  body > main article:nth-child(3) > form > fieldset label input {
-  	width: 100%;
+  main article:nth-child(3) input {
+  	width: auto;
+    margin-right: 1em;
   }
 
-  body > main article:nth-child(3) > form > fieldset label span {
-	  width: 100%;
+  main article:nth-child(3) span {
+	  width: 9.375em;
 	}
 }
